filtering by all and by most liked up and running

--- a/Society/CategoryHome/Category.storyboard
+++ b/Society/CategoryHome/Category.storyboard
@@ -105,7 +105,7 @@
                                     <color key="titleColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="grabPostFromAllTopics:" destination="Gaa-Gn-Ivm" eventType="touchUpInside" id="sxb-5q-ONv"/>
+                                    <action selector="grabMostLikedPosts:" destination="Gaa-Gn-Ivm" eventType="touchUpInside" id="W10-9I-1Yl"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csf-UC-KvY">
@@ -127,6 +127,9 @@
                                 <state key="normal" title="All">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="grabPostFromAllTopics:" destination="Gaa-Gn-Ivm" eventType="touchUpInside" id="JGC-OX-SoF"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
